<resources>
    <string name="app_name">SpatialAudio</string>
    <string name="Welcome">Welcome to our Spatial Audio test App!</string>
    <string name="IP_button_hint">Press me to view your IP address!</string>
    <string name="hide_IP_button_hint">Press me to hide your IP address!</string>
    <string name="IP_button">IP</string>
    <string name="your_IP">Your IP address is:</string>
    <string name="hide_IP_button">Hide IP</string>
    <string name="hidden">hidden</string>
    <string name="audio_Port">Port: </string>
    <string name="audio_Port_connection">Enter a desired port</string>
    <string name="IMUDATA">0</string>
    <string name="ENTER">Enter</string>
    <string name="Longitude">Longitude:</string>
    <string name="Latitude">Latitude:</string>
    <string name="Nose">Nose:</string>
    <string name="IP">IP:</string>
    <string name="Audio_Port">Port:</string>
    <string name="active">Active:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>